--- a/final_project/src/client/Makefile
+++ b/final_project/src/client/Makefile
@@ -1,5 +1,5 @@
 .SUFFIXED:.c .o
-
+INC = ../../include
 OBJS = client.o
 SRCS = client.cpp
 CXX = g++
@@ -7,10 +7,12 @@ CXX = g++
 client: $(OBJS)
 	$(CXX) -o client $(OBJS) -lpthread
 
+
+.cpp.o:
+	$(CXX) -c -g $<
+
 # .cpp.o:
 # 	$(CXX) -c $<
 
 clean:
 	rm *.o client
-
-client.o : client.cpp
