--- a/final_project/src/server/Makefile
+++ b/final_project/src/server/Makefile
@@ -1,14 +1,14 @@
 INC = ../../include
 CXX = g++
 CXXFLAGS = -fPIC -c  -g
-LDFLAGS = -lpthread -lboost_serialization
+LDFLAGS = -L../../lib -lboard -lmanager -ldownload   -ldl -lpthread -lboost_serialization
 #LDFLAGS = -L../libsrc -lmenu -lhash -lpthread -ldl -lboost_serialization
 #LDFLAGS = -L../../lib -lmenu -lprofile -lhash -lio  -lpthread
 #OBJS = add.o sub.o board.o
-OBJ1 = server.o user.o manager.o data.o board.o text_reader.o text_writer.o download.o myfile.o reply.o
+OBJ1 = server.o
+#OBJ1 = server.o user.o manager.o data.o board.o text_reader.o text_writer.o download.o myfile.o reply.o
 
-
-all: server libboard.so libdownload.so libmanager.so
+all: libboard.so libdownload.so libmanager.so server
 #libadd.so libsub.so libboard.so
 
 server: $(OBJ1)
@@ -22,7 +22,7 @@ server: $(OBJ1)
 
 
 libboard.so: board.o text_reader.o text_writer.o
-	$(CXX) -shared -fPIC -o $@ $<
+	$(CXX) -shared -fPIC -o $@ board.o text_reader.o text_writer.o
 	cp libboard.so ../../lib/
 
 libdownload.so: download.o
@@ -30,7 +30,7 @@ libdownload.so: download.o
 	cp libdownload.so ../../lib/
 
 libmanager.so: data.o myfile.o user.o reply.o manager.o
-	$(CXX) -shared -fPIC -o $@ $<
+	$(CXX) -shared -fPIC -o $@ data.o myfile.o user.o reply.o manager.o
 	cp libmanager.so ../../lib/
 
 clean:
