--- a/final_project/src/server/Makefile
+++ b/final_project/src/server/Makefile
@@ -1,9 +1,10 @@
 INC = ../../include
 CXX = g++
 CXXFLAGS = -fPIC -c  -g
-LDFLAGS = -L../../lib -lboard -lmanager -ldownload   -ldl -lpthread -lboost_serialization
-#LDFLAGS = -L../libsrc -lmenu -lhash -lpthread -ldl -lboost_serialization
-#LDFLAGS = -L../../lib -lmenu -lprofile -lhash -lio  -lpthread
+LDFLAGS = -L /home/mobis/final_final_2/final_project/lib -lboard -lmanager -ldownload   -ldl -lpthread -lboost_serialization
+#LDFLAGS = -L../../lib -lboard -lmanager -ldownload   -ldl -lpthread -lboost_serialization
+
+
 #OBJS = add.o sub.o board.o
 OBJ1 = server.o
 #OBJ1 = server.o user.o manager.o data.o board.o text_reader.o text_writer.o download.o myfile.o reply.o
@@ -13,6 +14,7 @@ all: libboard.so libdownload.so libmanager.so server
 
 server: $(OBJ1)
 	$(CXX) -o $@ $(OBJ1) $(LDFLAGS)
+	cp server ../../bin
 
 # server.o: server.cpp user.cpp manager.cpp
 # 	$(CXX) -c -I$(INC) -g $< 
